[package]
name = "advent-of-code-2016"
version = "0.1.0"
authors = ["David Cako <dc@cako.io>"]

[dependencies]
rust-crypto = "*"

[[bin]]
name="create_day"
path="src/bin/create_day.rs"

[[bin]]
name= "day01_a"
path="src/bin/01/a.rs"

[[bin]]
name= "day01_b"
path="src/bin/01/b.rs"

[[bin]]
name= "day02_a"
path="src/bin/02/a.rs"

[[bin]]
name= "day02_b"
path="src/bin/02/b.rs"

[[bin]]
name= "day03_a"
path="src/bin/03/a.rs"

[[bin]]
name= "day03_b"
path="src/bin/03/b.rs"

[[bin]]
name= "day04_a"
path="src/bin/04/a.rs"

[[bin]]
name= "day04_b"
path="src/bin/04/b.rs"

[[bin]]
name= "day05_a"
path="src/bin/05/a.rs"

[[bin]]
name="day05_b"
path="src/bin/05/b.rs"

[[bin]]
name="day05_b_multi"
path="src/bin/05/b_multi.rs"

[[bin]]
name="day06_a"
path="src/bin/06/a.rs"

[[bin]]
name="day06_b"
path="src/bin/06/b.rs"

[[bin]]
name="day07_a"
path="src/bin/07/a.rs"

[[bin]]
name="day07_b"
path="src/bin/07/b.rs"

[[bin]]
name="day08_a"
path="src/bin/08/a.rs"

[[bin]]
name="day08_b"
path="src/bin/08/b.rs"

[[bin]]
name="day09_a"
path="src/bin/09/a.rs"

[[bin]]
name="day09_b"
path="src/bin/09/b.rs"

[[bin]]
name="day10_a"
path="src/bin/10/a.rs"

[[bin]]
name="day10_b"
path="src/bin/10/b.rs"

[[bin]]
name="day11_a"
path="src/bin/11/a.rs"

[[bin]]
name="day11_b"
path="src/bin/11/b.rs"

